--- a/certs.yaml
+++ b/certs.yaml
@@ -2679,3 +2679,18 @@ lovebulletwiki:
   url: 'lovebullet.wiki'
   ca: 'LetsEncrypt'
   disable_event: false
+wikidemondealsorg:
+  url: 'wiki.demondeals.org'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
+wikicwkmediagrouporg:
+  url: 'wiki.cwkmediagroup.org'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
+foreststrawberryhomeorg:
+  url: 'forest.strawberryhome.org'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
