--- a/certs.yaml
+++ b/certs.yaml
@@ -2710,3 +2710,8 @@ wikititaniumnetwork:
   ca: 'Cloudflare'
   disable_event: false
   sslname: 'miraheze-origin-cert'
+famwikicafewiki:
+  url: 'fa.m.wikicafe.wiki'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
