--- a/certs.yaml
+++ b/certs.yaml
@@ -2739,3 +2739,8 @@ warhammer40kturkiyewiki:
   url: 'warhammer40kturkiye.wiki'
   ca: 'LetsEncrypt'
   disable_event: false
+wikifracturedfranchisecom:
+  url: 'wiki.fracturedfranchise.com'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
