--- a/certs.yaml
+++ b/certs.yaml
@@ -2822,3 +2822,8 @@ sytbaysite:
   url: 'sytbay.site'
   ca: 'LetsEncrypt'
   disable_event: false
+wikidstepanovinfo:
+  url: 'wiki.dstepanov.info'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
