--- a/certs.yaml
+++ b/certs.yaml
@@ -2091,10 +2091,6 @@ wikimyehseu:
   ca: 'Cloudflare'
   disable_event: false
   sslname: miraheze-origin-cert
-baublesme:
-  url: 'baubles.me'
-  ca: 'LetsEncrypt'
-  disable_event: false
 worldlesswiki:
   url: 'worldless.wiki'
   ca: 'LetsEncrypt'
@@ -2797,3 +2793,8 @@ polcompballnet:
   url: 'polcompball.net'
   ca: 'LetsEncrypt'
   disable_event: false
+wikibaublesme:
+  url: 'wiki.baubles.me'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
