--- a/certs.yaml
+++ b/certs.yaml
@@ -2808,3 +2808,8 @@ cnidariawiki:
   url: 'cnidaria.wiki'
   ca: 'LetsEncrypt'
   disable_event: false
+lagrancaidawikiarsengonxxyz:
+  url: 'lagrancaidawiki.arsengonx.xyz'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
