--- a/certs.yaml
+++ b/certs.yaml
@@ -2877,3 +2877,8 @@ gielinorgameswiki:
   url: 'gielinorgames.wiki'
   ca: 'LetsEncrypt'
   disable_event: false
+projdetariosodevcom:
+  url: 'projdet.ariosodev.com'
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: 'miraheze-origin-cert'
