--- a/redirects.yaml
+++ b/redirects.yaml
@@ -515,6 +515,13 @@ ssbuniversewiki:
   ca: 'CloudFlare'
   hsts: 'strict'
   disable_event: true
+elaruuwiki:
+  url: 'elaruu.miraheze.org'
+  redirect: 'elaruu-wiki.jamied132.is-a.dev'
+  sslname: 'miraheze-origin-cert'
+  ca: 'CloudFlare'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
